--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!-- This file is part of the precip_buoy_diag module of the MDTF code package (see mdtf/MDTF_v2.0/LICENSE.txt) -->
 <html>
-  <title> Here </title>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 </html>
