--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!-- This file is part of the precip_buoy_diag module of the MDTF code package (see mdtf/MDTF_v2.0/LICENSE.txt) -->
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+<TITLE>Precipitation Buoyancy Statistics</TITLE>
+<H3>Precipitation Buoyancy Statistics</h3>
+<P>
+The precipitation-buoyancy diagnostics POD evaluates the thermodynamic sensitivity of model 
+precipitation. This POD relates precipitation to a measure of lower-tropospheric averaged buoyancy (B<sub>L</sub>) and its two components:
+a measure of lower-tropospheric Convective Available Potential Energy (CAPE<sub>L</sub>) and
+lower-tropospheric sub saturation (SUBSAT<sub>L</sub>). 
+The observational baseline for the comparison is constructed using ERA5 
+thermodynamic profiles and TRMM 3B42 precipitation. The evaluation identifies if the model 
+first displays a precipitation-buoyancy relationship, and then assesses how sensitive the model 
+precipitation is to relative measures of conditional instability (CAPE<sub>L</sub>) and lower-tropospheric 
+sub-saturation (SUBSAT<sub>L</sub>). This evaluation also places the candidate model being evaluated among a 
+collection of CMIP6 models with respect to measures of thermodynamic sensitivity.
+</P>
 </html>
