--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@ sub-saturation (SUBSAT<sub>L</sub>). This evaluation also places the candidate m
 collection of CMIP6 models with respect to measures of thermodynamic sensitivity.
 </P>
 </html>
+
+<p>
+<a href="https://ahmedfiaz.github.io/MDTF-diagnostics/diagnostics/precip_buoy_diag/doc/MDTF_Documentation_precipitation_buoyancy.pdf">Full Documentation and Contact Information</a>
