--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@ precipitation is to relative measures of conditional instability (CAPE<sub>L</su
 sub-saturation (SUBSAT<sub>L</sub>). This evaluation also places the candidate model being evaluated among a 
 collection of CMIP6 models with respect to measures of thermodynamic sensitivity.
 </P>
-</html>
-
 <p>
 <a href="https://ahmedfiaz.github.io/MDTF-diagnostics/diagnostics/precip_buoy_diag/doc/MDTF_Documentation_precipitation_buoyancy.pdf">Full Documentation and Contact Information</a>
+<P>
+<TH ALIGH=LEFT><font color=navy> Precipitation Buoyancy Statistics for {{CASENAME}}
+<TABLE>
+<TD>Precipitation-buoyancy curve
+<TD>&nbsp; <A HREF=model/{{CASENAME}}.PrecipBuoyCurve.png>plot</A>
+<TR>
+<TR>
+</TABLE>
+</html>
