--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ collection of CMIP6 models with respect to measures of thermodynamic sensitivity
 <TH ALIGH=LEFT><font color=navy> Precipitation Buoyancy Statistics for {{CASENAME}}
 <TABLE>
 <TD>Precipitation-buoyancy curve
-<TD>&nbsp; <A HREF=model/{{CASENAME}}.PrecipBuoyCurve.png>plot</A>
+<TD>&nbsp; <A HREF=GFDL.CM4.c96L32_am4g9.PrecipBuoyCurve.png>plot</A>
 <TR>
 <TR>
 </TABLE>
