--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ collection of CMIP6 models with respect to measures of thermodynamic sensitivity
 <p>
 <a href="https://ahmedfiaz.github.io/MDTF-diagnostics/diagnostics/precip_buoy_diag/doc/MDTF_Documentation_precipitation_buoyancy.pdf">Full Documentation and Contact Information</a>
 <P>
-<TH ALIGH=LEFT><font color=navy> Precipitation Buoyancy Statistics for {{CASENAME}}
+<TH ALIGH=LEFT><font color=navy> Precipitation Buoyancy Statistics for GFDL.CM4.c96L32_am4g9
 <TABLE>
 <TD>Precipitation-buoyancy curve
-<TD>&nbsp; <A HREF=GFDL.CM4.c96L32_am4g9.PrecipBuoyCurve.png>plot</A>
+<TD>&nbsp; <A HREF=https://ahmedfiaz.github.io/MDTF-diagnostics/diagnostics/GFDL.CM4.c96L32_am4g9.PrecipBuoyCurve.png>plot</A>
 <TR>
 <TR>
 </TABLE>
