--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@ collection of CMIP6 models with respect to measures of thermodynamic sensitivity
 <TD>&nbsp; <A HREF=https://ahmedfiaz.github.io/MDTF-diagnostics/GFDL.CM4.c96L32_am4g9.PrecipBuoyCurve.png>plot</A>
 <TR>
 <TR>
+<TD>Precipitation-buoyancy surface
+<TD>&nbsp; <A HREF=https://ahmedfiaz.github.io/MDTF-diagnostics/GFDL.CM4.c96L32_am4g9.PrecipBuoySurf.png>plot</A>
+<TR>
+<TR>
 </TABLE>
 </html>
