--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@ collection of CMIP6 models with respect to measures of thermodynamic sensitivity
 <TD>&nbsp; <A HREF=https://ahmedfiaz.github.io/MDTF-diagnostics/GFDL.CM4.c96L32_am4g9.PrecipBuoySurf.png>plot</A>
 <TR>
 <TR>
+<TD>CMIP6 comparison
+<TD>&nbsp; <A HREF=https://ahmedfiaz.github.io/MDTF-diagnostics/GFDL.CM4.c96L32_am4g9.CMIP6comparison.png>plot</A>
+<TR>
 </TABLE>
 </html>
